@@ -438,6 +438,10 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 16612) Fixed "noprint" class for Modern skin print style
 * Section anchors now have an "id" attribute as well as a "name" attribute,
   even when Tidy is not used
+* (bug 16026) revision-info, revision-info-current, cannotdelete,
+  redirectedfrom and historywarning messages now use Wiki text rather than raw
+  HTML markup
+
 
 === API changes in 1.14 ===
 
